Table "account" {
  "id" text [pk, not null]
  "account_id" text [not null]
  "provider_id" text [not null]
  "user_id" text [not null]
  "access_token" text
  "refresh_token" text
  "id_token" text
  "access_token_expires_at" timestamp
  "refresh_token_expires_at" timestamp
  "scope" text
  "password" text
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null]

  Indexes {
    user_id [type: btree, name: "account_userId_idx"]
  }
}

Table "invitation" {
  "id" text [pk, not null]
  "organization_id" text [not null]
  "email" text [not null]
  "role" text
  "status" text [not null, default: 'pending']
  "expires_at" timestamp [not null]
  "created_at" timestamp [not null, default: `now()`]
  "inviter_id" text [not null]

  Indexes {
    organization_id [type: btree, name: "invitation_organizationId_idx"]
    email [type: btree, name: "invitation_email_idx"]
  }
}

Table "member" {
  "id" text [pk, not null]
  "organization_id" text [not null]
  "user_id" text [not null]
  "role" text [not null, default: 'member']
  "created_at" timestamp [not null]

  Indexes {
    (organization_id, user_id) [type: btree, unique, name: "membresia_empresa_usuario_unica"]
    organization_id [type: btree, name: "member_organizationId_idx"]
    user_id [type: btree, name: "member_userId_idx"]
  }
}

Table "oauth_access_token" {
  "id" text [pk, not null]
  "token" text [not null]
  "client_id" text [not null]
  "session_id" text
  "user_id" text
  "reference_id" text
  "authorization_code_id" text
  "resources" "text[]"
  "requested_user_info_claims" "text[]"
  "refresh_id" text
  "expires_at" timestamp [not null]
  "created_at" timestamp [not null]
  "revoked" timestamp
  "confirmation" jsonb
  "scopes" "text[]" [not null]

  Indexes {
    token [unique, name: "oauth_access_token_token_unique"]
    client_id [type: btree, name: "oauthAccessToken_clientId_idx"]
    session_id [type: btree, name: "oauthAccessToken_sessionId_idx"]
    user_id [type: btree, name: "oauthAccessToken_userId_idx"]
    authorization_code_id [type: btree, name: "oauthAccessToken_authorizationCodeId_idx"]
    refresh_id [type: btree, name: "oauthAccessToken_refreshId_idx"]
  }
}

Table "oauth_client" {
  "id" text [pk, not null]
  "client_id" text [not null]
  "client_secret" text
  "client_discovery_id" text
  "disabled" boolean [default: false]
  "skip_consent" boolean
  "enable_end_session" boolean
  "subject_type" text
  "scopes" "text[]"
  "client_credentials_scopes" "text[]" [default: '{}']
  "user_id" text
  "created_at" timestamp
  "updated_at" timestamp
  "name" text
  "uri" text
  "icon" text
  "contacts" "text[]"
  "tos" text
  "policy" text
  "software_id" text
  "software_version" text
  "software_statement" text
  "redirect_uris" "text[]" [not null]
  "post_logout_redirect_uris" "text[]"
  "backchannel_logout_uri" text
  "backchannel_logout_session_required" boolean
  "token_endpoint_auth_method" text
  "application_type" text
  "jwks" text
  "jwks_uri" text
  "grant_types" "text[]"
  "response_types" "text[]"
  "require_pkce" boolean
  "dpop_bound_access_tokens" boolean [default: false]
  "reference_id" text
  "metadata" jsonb

  Indexes {
    client_id [unique, name: "oauth_client_client_id_unique"]
    user_id [type: btree, name: "oauthClient_userId_idx"]
  }
}

Table "oauth_client_assertion" {
  "id" text [pk, not null]
  "expires_at" timestamp [not null]
}

Table "oauth_client_resource" {
  "id" text [pk, not null]
  "client_id" text [not null]
  "resource_id" text [not null]
  "metadata" jsonb
  "created_at" timestamp

  Indexes {
    (client_id, resource_id) [type: btree, unique, name: "oauthClientResource_clientId_resourceId_uidx"]
    client_id [type: btree, name: "oauthClientResource_clientId_idx"]
    resource_id [type: btree, name: "oauthClientResource_resourceId_idx"]
  }
}

Table "oauth_consent" {
  "id" text [pk, not null]
  "client_id" text [not null]
  "user_id" text
  "reference_id" text
  "resources" "text[]"
  "requested_user_info_claims" "text[]"
  "scopes" "text[]" [not null]
  "created_at" timestamp [not null]
  "updated_at" timestamp [not null]

  Indexes {
    client_id [type: btree, name: "oauthConsent_clientId_idx"]
    user_id [type: btree, name: "oauthConsent_userId_idx"]
  }
}

Table "oauth_refresh_token" {
  "id" text [pk, not null]
  "token" text [not null]
  "client_id" text [not null]
  "session_id" text
  "user_id" text [not null]
  "reference_id" text
  "authorization_code_id" text
  "resources" "text[]"
  "requested_user_info_claims" "text[]"
  "expires_at" timestamp [not null]
  "created_at" timestamp [not null]
  "revoked" timestamp
  "rotated_at" timestamp
  "rotation_replay_response" text
  "rotation_replay_expires_at" timestamp
  "auth_time" timestamp
  "confirmation" jsonb
  "scopes" "text[]" [not null]

  Indexes {
    token [unique, name: "oauth_refresh_token_token_unique"]
    client_id [type: btree, name: "oauthRefreshToken_clientId_idx"]
    session_id [type: btree, name: "oauthRefreshToken_sessionId_idx"]
    user_id [type: btree, name: "oauthRefreshToken_userId_idx"]
    authorization_code_id [type: btree, name: "oauthRefreshToken_authorizationCodeId_idx"]
  }
}

Table "oauth_resource" {
  "id" text [pk, not null]
  "identifier" text [not null]
  "name" text [not null]
  "access_token_ttl" integer
  "refresh_token_ttl" integer
  "signing_algorithm" text
  "signing_key_id" text
  "allowed_scopes" "text[]"
  "custom_claims" jsonb
  "dpop_bound_access_tokens_required" boolean [default: false]
  "disabled" boolean [default: false]
  "created_at" timestamp
  "updated_at" timestamp
  "policy_version" integer [default: 1]
  "metadata" jsonb

  Indexes {
    identifier [unique, name: "oauth_resource_identifier_unique"]
  }
}

Table "organization" {
  "id" text [pk, not null]
  "name" text [not null]
  "slug" text [not null]
  "logo" text
  "created_at" timestamp [not null]
  "metadata" text

  Indexes {
    slug [unique, name: "organization_slug_unique"]
  }
}

Table "session" {
  "id" text [pk, not null]
  "expires_at" timestamp [not null]
  "token" text [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null]
  "ip_address" text
  "user_agent" text
  "user_id" text [not null]
  "active_organization_id" text
  "segundo_factor_verificado_en" timestamp
  "reautenticado_en" timestamp

  Indexes {
    token [unique, name: "session_token_unique"]
    user_id [type: btree, name: "session_userId_idx"]
  }
}

Table "two_factor" {
  "id" text [pk, not null]
  "secret" text [not null]
  "backup_codes" text [not null]
  "user_id" text [not null]
  "verified" boolean [default: true]
  "failed_verification_count" integer [default: 0]
  "locked_until" timestamp

  Indexes {
    secret [type: btree, name: "twoFactor_secret_idx"]
    user_id [type: btree, name: "twoFactor_userId_idx"]
  }
}

Table "user" {
  "id" text [pk, not null]
  "name" text [not null]
  "email" text [not null]
  "email_verified" boolean [not null, default: false]
  "image" text
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "two_factor_enabled" boolean [default: false]
  "debe_cambiar_clave" boolean [not null, default: true]

  Indexes {
    email [unique, name: "user_email_unique"]
  }
}

Table "verification" {
  "id" text [pk, not null]
  "identifier" text [not null]
  "value" text [not null]
  "expires_at" timestamp [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]

  Indexes {
    identifier [type: btree, name: "verification_identifier_idx"]
  }
}

Ref "account_user_id_user_id_fk":"user"."id" <? "account"."user_id" [update: no action, delete: cascade]

Ref "invitation_organization_id_organization_id_fk":"organization"."id" <? "invitation"."organization_id" [update: no action, delete: cascade]

Ref "invitation_inviter_id_user_id_fk":"user"."id" <? "invitation"."inviter_id" [update: no action, delete: cascade]

Ref "member_organization_id_organization_id_fk":"organization"."id" <? "member"."organization_id" [update: no action, delete: cascade]

Ref "member_user_id_user_id_fk":"user"."id" <? "member"."user_id" [update: no action, delete: cascade]

Ref "oauth_access_token_client_id_oauth_client_client_id_fk":"oauth_client"."client_id" <? "oauth_access_token"."client_id" [update: no action, delete: cascade]

Ref "oauth_access_token_session_id_session_id_fk":"session"."id" ?<? "oauth_access_token"."session_id" [update: no action, delete: set null]

Ref "oauth_access_token_user_id_user_id_fk":"user"."id" ?<? "oauth_access_token"."user_id" [update: no action, delete: cascade]

Ref "oauth_access_token_refresh_id_oauth_refresh_token_id_fk":"oauth_refresh_token"."id" ?<? "oauth_access_token"."refresh_id" [update: no action, delete: cascade]

Ref "oauth_client_user_id_user_id_fk":"user"."id" ?<? "oauth_client"."user_id" [update: no action, delete: cascade]

Ref "oauth_client_resource_client_id_oauth_client_client_id_fk":"oauth_client"."client_id" <? "oauth_client_resource"."client_id" [update: no action, delete: cascade]

Ref "oauth_client_resource_resource_id_oauth_resource_identifier_fk":"oauth_resource"."identifier" <? "oauth_client_resource"."resource_id" [update: no action, delete: cascade]

Ref "oauth_consent_client_id_oauth_client_client_id_fk":"oauth_client"."client_id" <? "oauth_consent"."client_id" [update: no action, delete: cascade]

Ref "oauth_consent_user_id_user_id_fk":"user"."id" ?<? "oauth_consent"."user_id" [update: no action, delete: cascade]

Ref "oauth_refresh_token_client_id_oauth_client_client_id_fk":"oauth_client"."client_id" <? "oauth_refresh_token"."client_id" [update: no action, delete: cascade]

Ref "oauth_refresh_token_session_id_session_id_fk":"session"."id" ?<? "oauth_refresh_token"."session_id" [update: no action, delete: set null]

Ref "oauth_refresh_token_user_id_user_id_fk":"user"."id" <? "oauth_refresh_token"."user_id" [update: no action, delete: cascade]

Ref "session_user_id_user_id_fk":"user"."id" <? "session"."user_id" [update: no action, delete: cascade]

Ref "two_factor_user_id_user_id_fk":"user"."id" <? "two_factor"."user_id" [update: no action, delete: cascade]
